--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  shared_preferences: ^2.5.3
+  shared_preferences: ^2.2.2
+  camera: ^0.10.5+9
+  geolocator: ^11.0.0
+  google_maps_flutter: ^2.5.3
+  sqflite: ^2.3.2
+  path: ^1.8.3
+  http: ^1.2.0
+  path_provider: ^2.1.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
