--- a/backend/autenticacao/src/main/resources/application.yml
+++ b/backend/autenticacao/src/main/resources/application.yml
@@ -6,10 +6,10 @@ spring:
     name: autenticacao-service
   
   datasource:
-    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:autenticacao_db}
     driver-class-name: org.postgresql.Driver
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    username: ${DB_USERNAME:daviffsilva}
+    password: ${DB_PASSWORD:1234}
   
   jpa:
     hibernate:
@@ -22,7 +22,7 @@ spring:
 
 # JWT Configuration
 jwt:
-  secret: ${JWT_SECRET}
+  secret: ${JWT_SECRET:mySecretKey1234567890123456789012345678901234567890}
   expiration: 86400000 # 24 hours in milliseconds
   refresh-expiration: 604800000 # 7 days in milliseconds
 
