--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   http: ^1.2.0
   path_provider: ^2.1.2
   intl: ^0.19.0
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
