--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -97,5 +97,5 @@ flutter:
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
 
-  assets:
-    - assets/images/
+  # assets:
+  #   - assets/images/
