--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   camera: ^0.10.5+9
   geolocator: ^11.0.0
   google_maps_flutter: ^2.5.3
+  google_places_flutter: ^2.0.6
   sqflite: ^2.3.2
   path: ^1.8.3
   http: ^1.2.0
