--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
         android:icon="@mipmap/ic_launcher">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCqr8Wgsww7SFZ7tMb2F5PnBF_lUFnbTY4" />
+            android:value="" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
