--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -43,3 +43,15 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Firebase and sensitive configuration files
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
+lib/config/app_config.dart
+lib/config/api_config.dart
+lib/firebase_options.dart
+
+# Environment files
+.env
+.env.local
+.env.production
