--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   path_provider: ^2.1.2
   intl: ^0.19.0
   web_socket_channel: ^2.4.0
+  # Firebase dependencies
+  firebase_core: ^3.6.0
+  firebase_messaging: ^15.1.3
+  flutter_local_notifications: ^18.0.1
 
 dev_dependencies:
   flutter_test:
