--- a/backend/gateway/src/main/resources/application.yml
+++ b/backend/gateway/src/main/resources/application.yml
@@ -14,6 +14,21 @@ spring:
           uri: ${AUTH_SERVICE_URL:http://localhost:8081}
           predicates:
             - Path=/api/auth/**
+        
+        - id: pedidos-service
+          uri: ${PEDIDOS_SERVICE_URL:http://localhost:8082}
+          predicates:
+            - Path=/api/pedidos/**
+        
+        - id: rastreamento-service
+          uri: ${RASTREAMENTO_SERVICE_URL:http://localhost:8083}
+          predicates:
+            - Path=/api/localizacoes/**
+        
+        - id: notificacao-service
+          uri: ${NOTIFICATION_SERVICE_URL:http://localhost:8084}
+          predicates:
+            - Path=/api/notification/**
 
 jwt:
   secret: ${JWT_SECRET:mySecretKey1234567890123456789012345678901234567890}
